--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/mrjacoughlin/Employee-Tracker#readme",
   "dependencies": {
-    "mysql": "^2.18.1"
+    "inquirer": "^7.3.3",
+    "mysql": "^2.18.1",
+    "sequelize": "^6.5.0"
   }
 }
